<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetalheProdutoActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imvFoto"
        android:layout_width="146dp"
        android:layout_height="145dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeProdutoAdapter"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:contentDescription="@string/descricao_foto_produto" />

    <TextView
        android:id="@+id/tvValorProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:hint="@string/valor_produto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvFoto" />

    <TextView
        android:id="@+id/tvQuantidadeProduto"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:hint="@string/quantidade_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvValorProduto"
        app:layout_constraintTop_toBottomOf="@+id/imvFoto" />

    <TextView
        android:id="@+id/tvNomeProdutoAdapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/nome_do_produto"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btComprarProduto"
        android:layout_width="95dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/btcomprar"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescricaoProduto" />

    <TextView
        android:id="@+id/tvDescricaoProduto"
        android:layout_width="325dp"
        android:layout_height="54dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:hint="@string/descricao_produto"
        android:textSize="23sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuantidadeProduto" />

    <EditText
        android:id="@+id/etQuantidade"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/hint_quantidade"
        android:inputType="numberSigned"
        app:layout_constraintStart_toEndOf="@+id/btComprarProduto"
        app:layout_constraintTop_toBottomOf="@+id/tvDescricaoProduto" />
</android.support.constraint.ConstraintLayout>